--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,15 @@ dependencies:
   highlight_text: ^1.3.0
   avatar_glow: ^1.2.0
   flutter_tts: ^3.3.3
+  google_fonts:  ^2.1.0
+  flutter_svg: ^1.0.3
+  intro_views_flutter: ^3.0.0
+  get: ^4.6.1
+  inview_notifier_list: ^3.0.0
+  http: ^0.13.4
+  webfeed: ^0.7.0
+  url_launcher: ^6.0.20
+  cached_network_image: ^3.2.0
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +69,16 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/news.jpg
+    - assets/images/main_top.png
+    - assets/images/main_bottom.png
+    - assets/images/background.jpg
+  fonts:
+    - family: Klasik
+      fonts:
+        - asset: assets/fonts/Klasik Regular.otf
+        - asset: assets/fonts/Lora-VariableFont_wght.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
