--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   cached_network_image: ^3.2.0
   flutter_parse: ^1.0.1
   html: ^0.15.0
+  sqflite: ^2.0.0+3
   webview_flutter: ^3.0.2
 dev_dependencies:
   flutter_test:
@@ -77,7 +78,6 @@ flutter:
     - assets/images/main_bottom.png
     - assets/images/background.jpg
     - assets/images/microphone.png
-    - assets/images/search_by_voice.png
   fonts:
     - family: Klasik
       fonts:
