--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_parse: ^1.0.1
   html: ^0.15.0
   sqflite: ^2.0.0+3
+  connectivity_plus: ^1.0.6
   webview_flutter: ^3.0.2
 dev_dependencies:
   flutter_test:
